syntax = "proto3";

message Plink {
    uint32 version = 1; // 2 Byte
    string uuid = 2; // 36 Byte offset 2
    string socketIP = 3; // 32 Byte offset 38
    uint64 ts = 4; // 8 Byte offset 70
}

message Channel{
    uint32 version = 1; 
    uint32 id = 2;
    uint64 ts = 3;
    oneof action {
        ConnectAction connect = 4;
        DisconnectAction disconnect = 5;
        DataAction data = 6;
        SyncAction sync = 7;
    }
}

message ConnectAction{
    uint32 seq = 1;
    uint32 ack = 2;
}

message DisconnectAction{
    uint32 seq = 1;
    uint32 ack = 2;
}

message DataAction{
    uint32 id = 1;
    uint32 index = 2;
    oneof data {
        string text = 3;
        File file = 4;
    }
}

message File{
    string name = 1;
    string type = 2;
    bytes data = 3;
}

message SyncAction{
    uint32 id = 1;
    oneof signal {
        SynReadySignal synReady = 2;
        AckReadySignal ackReady = 3;
        SynStageSignal synStage = 4;
        AckStageSignal ackStage = 5;

    }
}

message SynReadySignal{
    uint32 length = 1;
    uint32 size = 2;
    string sign = 3;
}

message AckReadySignal{
    uint32 length = 1;
    uint32 size = 2;
    string sign = 3;
}

message SynStageSignal{
    uint32 sendCount = 1;
    uint32 sendSize = 2;
}

message AckStageSignal{
    uint32 recCount = 1;
    uint32 recSize = 2;
    repeated uint32 lostIndexes= 3;
}


// enum DataMethod {
//     REQUEST = 0;
//     RESPONSE = 1;
// }


